<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">PRApp</string>
    <string name="search_hint">Cerca</string>
    <string name="not_implemented_yet">Funzione non ancora implementata</string>
    <string name="default_dataDiNascita">XX-XX-XXXX</string>
    <string name="statoPrevendita_consegnata">Consegnata</string>
    <string name="statoPrevendita_pagata">Pagata</string>
    <string name="statoPrevendita_annullata">Annullata</string>
    <string name="statoPrevendita_rimborsata">Rimborsata</string>
    <string name="diritto_pr">Pr</string>
    <string name="diritto_cassiere">Cassiere</string>
    <string name="diritto_amministratore">Amministratore</string>
    <string name="statoEvento_valido">Valido</string>
    <string name="statoEvento_annullato">Annullato</string>
    <string name="statoEvento_rimborsato">Rimborsato</string>
    <string name="statoEvento_pagato">Pagato</string>
    <string name="app_package">com.prapp</string>
    <string name="no_login">Non sei loggato</string>
    <string name="no_staff">Non hai scelto lo staff</string>
    <string name="no_evento">Non hai scelto l\'evento</string>
    <string name="empty_string" />
    <string name="invalid_token">Token non valido</string>
    <string name="no_token">Nessun Token</string>
    <string name="select_staff_title">Seleziona Staff</string>
    <string name="select_evento_title">Seleziona Evento</string>
    <string name="select_evento_date_placeholder">
        <xliff:g example="01/01/01" id="inizio">%1$s</xliff:g> - <xliff:g example="01/01/01" id="fine">%2$s</xliff:g>
    </string>
    <string name="title_activity_login">Entra</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Accedi</string>
    <string name="action_sign_in_short">Accedi</string>
    <string name="welcome">Ciao! <xliff:g example="Piero" id="nome">%1$s</xliff:g></string>
    <string name="invalid_username">Username non valido</string>
    <string name="invalid_password">Password non valida</string>
    <string name="login_failed">"Accesso Fallito"</string>
    <string name="popup_esito_image_description">Esito</string>
    <string name="popup_qr_image_description">QR</string>
    <string name="popup_esito_errore_formatted">
        Errore: <xliff:g id="errore">%1$s</xliff:g>
    </string>
    <string name="wstaff_list_item_nome">Staff</string>
    <string name="wstaff_list_item_data">XX\-XX\-XXXX</string>
    <string name="wutente_list_item_telefono">+39123456789</string>
    <string name="wutente_list_item_cognome">Cognome</string>
    <string name="wutente_list_item_nome">Nome</string>
    <string name="wevento_list_item_nome">Nome</string>
    <string name="wevento_list_item_descrizione">Descrizione</string>
    <string name="wevento_list_item_periodo">Periodo</string>
    <string name="wcliente_list_item_nome">Nome</string>
    <string name="wcliente_list_item_cognome">Cognome</string>
    <string name="wcliente_list_item_dataDiNascita">XX-XX-XXXX</string>
    <string name="wtipoprevendita_list_item_nome">Nome</string>
    <string name="wtipoprevendita_list_item_prezzo_label">Prezzo:</string>
    <string name="wtipoprevendita_list_item_prezzo">ND</string>
    <string name="wtipoprevendita_list_item_periodoVendita_label">Periodo vendita:</string>
    <string name="wtipoprevendita_list_item_periodoVendita">
        <xliff:g example="01/01/01" id="inizio">%1$s</xliff:g> - <xliff:g example="01/01/01" id="fine">%2$s</xliff:g>
    </string>
    <string name="wprevendita_plus_list_item_nomeEvento_label">Evento:</string>
    <string name="wprevendita_plus_list_item_nomeEvento">ND</string>
    <string name="wprevendita_plus_list_item_nomePR_label">PR:</string>
    <string name="wprevendita_plus_list_item_nomePR">ND</string>
    <string name="wprevendita_plus_list_item_nomePR_formatted">
        <xliff:g example="Piero" id="nome">%1$s</xliff:g>
        <xliff:g example="Pasquale" id="cognome">%2$s</xliff:g>
    </string>
    <string name="wprevendita_plus_list_item_nomeCliente_label">Cliente:</string>
    <string name="wprevendita_plus_list_item_nomeCliente">ND</string>
    <string name="wprevendita_plus_list_item_nomeCliente_formatted">
        <xliff:g example="Piero" id="nome">%1$s</xliff:g>
        <xliff:g example="Pasquale" id="cognome">%2$s</xliff:g>
    </string>
    <string name="wprevendita_plus_list_item_nomeTipoPrevendita_label">Tipo Prevendita:</string>
    <string name="wprevendita_plus_list_item_nomeTipoPrevendita">ND</string>
    <string name="wprevendita_plus_list_item_prezzoTipoPrevendita_label">Prezzo:</string>
    <string name="wprevendita_plus_list_item_prezzoTipoPrevendita">ND</string>
    <string name="wprevendita_plus_list_item_statoPrevendita_label">Stato:</string>
    <string name="wprevendita_plus_list_item_statoPrevendita">ND</string>
    <string name="wprevendita_plus_list_item_errore_label">ERRORE:</string>
    <string name="wprevendita_plus_list_item_errore">ND</string>
    <string name="statistichemembro_list_item_nomeMembro">Nome</string>
    <string name="statistichemembro_list_item_cognomeMembro">Cognome</string>
    <string name="statistichemembro_list_item_label_pr">PR)</string>
    <string name="statistichemembro_list_item_label_cassiere">Cassiere)</string>
    <string name="statistichemembro_list_item_label_entrateCassiere">Entrate:</string>
    <string name="statistichemembro_list_item_entrateCassiere">ND</string>
    <string name="statistichemembro_sub_list_pr_item_label_tipoPrevendita">Tipo Prevendita:</string>
    <string name="statistichemembro_sub_list_pr_item_tipoPrevendita">Tipo</string>
    <string name="statistichemembro_sub_list_pr_item_label_prevenditeVendute">P. Vendute:</string>
    <string name="statistichemembro_sub_list_pr_item_prevenditeVendute">ND</string>
    <string name="statistichemembro_sub_list_pr_item_label_ricavo">Ricavo:</string>
    <string name="statistichemembro_sub_list_pr_item_ricavo">ND</string>
    <string name="wstatisticheevento_list_item_nomeTipoPrevendita_label">Nome Tipo Prevendita:</string>
    <string name="wstatisticheevento_list_item_nomeTipoPrevendita">Nome</string>
    <string name="wstatisticheevento_list_item_prevenditeVendute_label">Prevendite Vendute:</string>
    <string name="wstatisticheevento_list_item_prevenditeVendute">ND</string>
    <string name="wstatisticheevento_list_item_ricavo_label">Ricavo:</string>
    <string name="wstatisticheevento_list_item_ricavo">ND</string>
    <string name="wstatisticheevento_list_item_prevenditeEntrate_label">Prevendite Entrate:</string>
    <string name="wstatisticheevento_list_item_prevenditeEntrate">ND</string>
    <string name="wstatisticheevento_list_item_prevenditeNonEntrate_label">Prevendite Non Entrate:</string>
    <string name="wstatisticheevento_list_item_prevenditeNonEntrate">ND</string>
    <string name="title_activity_main">PRApp</string>
    <string name="title_utente">Utente</string>
    <string name="title_membro">Membro</string>
    <string name="title_pr">PR</string>
    <string name="title_cassiere">Cassiere</string>
    <string name="title_amministratore">Amministratore</string>
    <string name="show_camera_permission_request">L\'applicazione ha bisogno dell\'autorizzazione alla fotocamera per scannerizzare. Acconsenti?</string>
    <string name="show_camera_permission_granted">Accesso alla camera acconsentito</string>
    <string name="show_camera_permission_denied">Ao mo non puoi fare il cassiere</string>
    <string name="fragment_utente_nome">Nome</string>
    <string name="fragment_utente_cognome">Cognome</string>
    <string name="fragment_utente_telefono">Telefono</string>
    <string name="fragment_utente_logout">Logout</string>
    <string name="fragment_utente_nome_staff">Nome staff</string>
    <string name="fragment_utente_diritti_label">Diritti:  </string>
    <string name="fragment_utente_diritti">[]</string>
    <string name="fragment_utente_nomeEvento">Nome</string>
    <string name="fragment_utente_descrizioneEvento">Descrizione</string>
    <string name="fragment_utente_periodoEvento">Periodo</string>
    <string name="fragment_utente_periodoEvento_placeholder">
        <xliff:g example="01/01/01" id="inizio">%1$s</xliff:g> - <xliff:g example="01/01/01" id="fine">%2$s</xliff:g>
    </string>
    <string name="fragment_membro_title_membri">Membri dello Staff</string>
    <string name="fragment_membro_title_eventi">Eventi</string>
    <string name="fragment_membro_menu_listaMembriItem">Lista membri</string>
    <string name="fragment_membro_menu_listaClientiItem">Lista clienti</string>
    <string name="fragment_membro_menu_listaTipoPrevenditaItem">Lista tipo prevendita</string>
    <string name="fragment_pr_cliente_toolbar_label">Cliente</string>
    <string name="fragment_pr_prevendita_toolbar_label">Prevendita</string>
    <string name="fragment_pr_add_cliente_nome_label">Nome:</string>
    <string name="fragment_pr_add_cliente_cognome_label">Cognome:</string>
    <string name="fragment_pr_add_cliente_dataDiNascita_label">Data di nascita:</string>
    <string name="fragment_pr_add_cliente_nome_editText_label">(obbligatorio)</string>
    <string name="fragment_pr_add_cliente_cognome_editText_label">(obbligatorio)</string>
    <string name="fragment_pr_add_cliente_dataDiNascita_editText_label">(opzionale)</string>
    <string name="fragment_pr_add_cliente_button_label">Aggiungi Cliente</string>
    <string name="fragment_pr_menu_aggiungiPrevenditaItem">Aggiungi prevendita</string>
    <string name="fragment_pr_menu_listaPrevenditeItem">Lista prevendite</string>
    <string name="fragment_pr_menu_statisticheEventoItem">Statistiche evento</string>
    <string name="fragment_pr_cliente_menu_searchItem">Cerca</string>
    <string name="fragment_pr_cliente_menu_aggiungiClienteItem">Aggiungi cliente</string>
    <string name="fragment_pr_add_cliente_invalid_nome">Nome cliente non valido</string>
    <string name="fragment_pr_add_cliente_invalid_cognome">Cognome cliente non valido</string>
    <string name="fragment_pr_add_cliente_invalid_dataDiNascita">Data di nascita cliente non valido</string>
    <string name="fragment_pr_prevendita_menu_searchItem">Cerca</string>
    <string name="fragment_pr_selection_prevendita_menu_editItem">Modifica</string>
    <string name="fragment_pr_tipoPrevendita_label">Tipo Prevendita:</string>
    <string name="fragment_pr_tipoPrevendita_editText_label">(Cerca nella barra)</string>
    <string name="fragment_pr_statoPrevendita_label">Stato Prevendita:</string>
    <string name="fragment_pr_aggiungiPrevendita_button_label">Aggiungi Prevendita</string>
    <string name="fragment_pr_popup_success">Prevendita creata!</string>
    <string name="fragment_pr_popup_condividi">CONDIVIDI</string>
    <string name="fragment_pr_qr_text_persona">
        <xliff:g example="Piero" id="nome">%1$s</xliff:g> <xliff:g example="Marconi" id="cognome">%2$s</xliff:g>\n
    </string>
    <string name="fragment_pr_qr_text_warning">PRESENTARSI CON UN DOCUMENTO VALIDO ALL\'INGRESSO</string>
    <string name="fragment_pr_qr_text_infoPrevendita">
        <xliff:g example="123" id="idPrevendita">%1$d</xliff:g> - <xliff:g example="123" id="idEvento">%2$d</xliff:g> - <xliff:g example="XXX" id="codice">%3$s</xliff:g>\n
    </string>
    <string name="fragment_cassiere_menu_scansionaItem">Scansiona QR</string>
    <string name="fragment_cassiere_menu_autoApprovaItem">Auto-Approva</string>
    <string name="fragment_cassiere_menu_genteEntrataItem">Prevendite entrate</string>
    <string name="fragment_cassiere_menu_genteNonEntrataItem">Prevendite non entrate</string>
    <string name="fragment_cassiere_menu_statisticheEventoItem">Statistiche evento</string>
    <string name="fragment_cassiere_approva_label">APPROVA</string>
    <string name="fragment_cassiere_annulla_label">ANNULLA</string>
</resources>