<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ PRApp  Copyright (C) 2019  Luca Bartolomei
  ~
  ~ This file is part of PRApp.
  ~
  ~     PRApp is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     PRApp is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with PRApp.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/cassiere_scansionaItem"
        android:title="@string/fragment_cassiere_menu_scansionaItem"/>
    <item android:id="@+id/cassiere_autoApprovaItem"
        android:title="@string/fragment_cassiere_menu_autoApprovaItem"/>
    <item android:id="@+id/cassiere_genteEntrataItem"
        android:title="@string/fragment_cassiere_menu_genteEntrataItem"/>
    <item android:id="@+id/cassiere_genteNonEntrataItem"
        android:title="@string/fragment_cassiere_menu_genteNonEntrataItem"/>
    <item android:id="@+id/cassiere_statisticheEventoItem"
        android:title="@string/fragment_cassiere_menu_statisticheEventoItem"/>
</menu>