<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ PRApp  Copyright (C) 2019  Luca Bartolomei
  ~
  ~ This file is part of PRApp.
  ~
  ~     PRApp is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     PRApp is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with PRApp.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/cardview_checked"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wprevendita_plus_list_item_nomeEvento_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wprevendita_plus_list_item_nomeEvento_label" />

            <TextView
                android:id="@+id/wprevendita_plus_list_item_nomeEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wprevendita_plus_list_item_nomeEvento" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wprevendita_plus_list_item_nomePR_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wprevendita_plus_list_item_nomePR_label" />

            <TextView
                android:id="@+id/wprevendita_plus_list_item_nomePR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wprevendita_plus_list_item_nomePR" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wprevendita_plus_list_item_nomeCliente_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wprevendita_plus_list_item_nomeCliente_label" />

            <TextView
                android:id="@+id/wprevendita_plus_list_item_nomeCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wprevendita_plus_list_item_nomeCliente" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wprevendita_plus_list_item_nomeTipoPrevendita_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wprevendita_plus_list_item_nomeTipoPrevendita_label" />

            <TextView
                android:id="@+id/wprevendita_plus_list_item_nomeTipoPrevendita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wprevendita_plus_list_item_nomeTipoPrevendita" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wprevendita_plus_list_item_prezzoTipoPrevendita_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wprevendita_plus_list_item_prezzoTipoPrevendita_label" />

            <TextView
                android:id="@+id/wprevendita_plus_list_item_prezzoTipoPrevendita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wprevendita_plus_list_item_prezzoTipoPrevendita" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wprevendita_plus_list_item_statoPrevendita_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wprevendita_plus_list_item_statoPrevendita_label" />

            <TextView
                android:id="@+id/wprevendita_plus_list_item_statoPrevendita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wprevendita_plus_list_item_statoPrevendita" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle"
            android:layout_marginTop="5dp">


            <Button
                android:id="@+id/wprevendita_plus_list_item_approva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/fragment_cassiere_approva_label" />

            <Button
                android:id="@+id/wprevendita_plus_list_item_annulla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/fragment_cassiere_annulla_label" />
        </LinearLayout>

        <!--

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="Scemo chi legge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="Scemo chi legge" />

        -->

    </LinearLayout>
</androidx.cardview.widget.CardView>