<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ PRApp  Copyright (C) 2019  Luca Bartolomei
  ~
  ~ This file is part of PRApp.
  ~
  ~     PRApp is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     PRApp is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with PRApp.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardBackgroundColor="@color/primaryColorGrey"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wstatisticheevento_list_item_nomeTipoPrevendita_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wstatisticheevento_list_item_nomeTipoPrevendita_label" />

            <TextView
                android:id="@+id/wstatisticheevento_list_item_nomeTipoPrevendita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wstatisticheevento_list_item_nomeTipoPrevendita" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wstatisticheevento_list_item_prevenditeVendute_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wstatisticheevento_list_item_prevenditeVendute_label" />

            <TextView
                android:id="@+id/wstatisticheevento_list_item_prevenditeVendute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wstatisticheevento_list_item_prevenditeVendute" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wstatisticheevento_list_item_ricavo_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wstatisticheevento_list_item_ricavo_label" />

            <TextView
                android:id="@+id/wstatisticheevento_list_item_ricavo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wstatisticheevento_list_item_ricavo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wstatisticheevento_list_item_prevenditeEntrate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wstatisticheevento_list_item_prevenditeEntrate_label" />

            <TextView
                android:id="@+id/wstatisticheevento_list_item_prevenditeEntrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wstatisticheevento_list_item_prevenditeEntrate" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wstatisticheevento_list_item_prevenditeNonEntrate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wstatisticheevento_list_item_prevenditeNonEntrate_label" />

            <TextView
                android:id="@+id/wstatisticheevento_list_item_prevenditeNonEntrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                tools:text="@string/wstatisticheevento_list_item_prevenditeNonEntrate" />

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>